--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
     </header>
 
     <div id="separador" class="row">
-        <div class="col-2" style="background-color: #57aa26;"></div>
+        <div class="col-2" style="background-color: #4e26aa;"></div>
         <div class="col-2" style="background-color: #1aa4c1;"></div>
         <div class="col-2" style="background-color: #fcc204;"></div>
         <div class="col-2" style="background-color: #e95f15;"></div>
