--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
-    <link rel="stylesheet" href="test.css"/>
+    <link rel="stylesheet" href="Index.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:100,200,300,400,500,600,700,800,900|PT+Sans+Narrow:100,200,300,400,500,600,700,800,900|PT+Sans+Narrow:700,800,|PT+Sans:100,200,300,400,500,600,700,800,900|Array:100,200,300,400,500,600,700,800,900|Special+Elite:100,200,300,400,500,600,700,800,900|Playfair+Display:100,200,300,400,500,600,700,800,900">
@@ -34,8 +34,8 @@
         <div class="col-2" style="background-color: #ba007b;"></div>
     </div>
 
-    <!-- <footer>
+    <footer>
 
-    </footer> -->
+    </footer>
 </body>
 </html>
