--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:100,200,300,400,500,600,700,800,900|PT+Sans+Narrow:100,200,300,400,500,600,700,800,900|PT+Sans+Narrow:700,800,|PT+Sans:100,200,300,400,500,600,700,800,900|Array:100,200,300,400,500,600,700,800,900|Special+Elite:100,200,300,400,500,600,700,800,900|Playfair+Display:100,200,300,400,500,600,700,800,900">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     
     <header>
 
@@ -34,8 +34,16 @@
         <div class="col-2" style="background-color: #ba007b;"></div>
     </div>
 
-    <footer>
-
+    <footer class="mt-auto">
+        <section id="info">
+            <img src="img/footer-logo.png">
+        </section>
+        <section id="rrss">
+            <img src="img/instagram-logo.svg">
+            <img src="img/linkedin-logo.svg">
+            <img src="img/twitter-logo.svg">
+            <img src="img/youtube-logo.svg">
+        </section>
     </footer>
 </body>
 </html>
