--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>register</title>
     <link rel="stylesheet" href="test.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -61,6 +61,14 @@
                 <div class="col-12">
                     <form action="" method="post">
                         <div class="mb-3">
+                            <label class="form-label">Nombre:</label>
+                            <input type="text" class="form-control" id="" name="nombre">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Apellidos:</label>
+                            <input type="text" class="form-control" id="" name="Apellidos">
+                        </div>
+                        <div class="mb-3">
                             <label class="form-label">Email:</label>
                             <input type="email" class="form-control" id="" name="correo">
                         </div>
@@ -69,8 +77,16 @@
                             <input type="password" class="form-control" id="" name="contrasena">
                         </div>
                         <div class="mb-3">
-                            <input type="submit" value="Entrar" class="btn btn-primary">
-                            <a class="btn btn-success">Registrarse</a>
+                            <label class="form-label">Curso:</label>
+                            <select class="form-select">
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <input type="submit" value="Registrarse" class="btn btn-primary">
+                            <a class="btn btn-success">Volver</a>
                         </div>
                     </form>
                 </div>
