--- a/Index.html
+++ b/Index.html
@@ -17,9 +17,9 @@
         <section id="titulo"><img id="logo" src="img/Logo_reto.png"> <div>Noticias / Publicaciones</div></section>
 
         <section id="login">
-            <div class="text"> <a href="login.php">Iniciar sesión &nbsp;</a></div>
+            <div class="text"> <a style="text-decoration: none;color:black;" href="login.php">Iniciar sesión &nbsp;</a></div>
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 33 33" fill="none">
-                <circle cx="16.5" cy="16.5" r="16.5" fill="#D9D9D9"/>
+                <a style="text-decoration: none;color:black;" href="login.php"><circle cx="16.5" cy="16.5" r="16.5" fill="#D9D9D9"/></a>
             </svg>
         </section>
     </header>
@@ -33,10 +33,11 @@
         <div class="col-2" style="background-color: #ba007b;"></div>
     </div>
 
-    <footer class="mt-auto">
-        <section id="info">
+    <footer class="mt-auto d-flex align-items-center justify-content-between" >
+        <section id="info" >
             <img src="img/footer-logo.png">
         </section>
+        
         <section id="rrss">
             <img src="img/instagram-logo.svg">
             <img src="img/linkedin-logo.svg">
