--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,8 @@
 
         <section id="login">
             <div class="text"> <a style="text-decoration: none;color:black;" href="login.php">Iniciar sesión &nbsp;</a></div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 33 33" fill="none">
-                <a style="text-decoration: none;color:black;" href="login.php"><circle cx="16.5" cy="16.5" r="16.5" fill="#D9D9D9"/></a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" fill="none">
+                <circle cx="16.5" cy="16.5" r="16.5" fill="#D9D9D9"/>
             </svg>
         </section>
     </header>
@@ -33,16 +33,31 @@
         <div class="col-2" style="background-color: #ba007b;"></div>
     </div>
 
+    <section id="contenido">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12 11.25C14.8995 11.25 17.25 8.89949 17.25 6C17.25 3.10051 14.8995 0.75 12 0.75C9.10051 0.75 6.75 3.10051 6.75 6C6.75 8.89949 9.10051 11.25 12 11.25Z" stroke="#3377FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M2.25 23.25C2.25 17.8652 6.61522 13.5 12 13.5C17.3848 13.5 21.75 17.8652 21.75 23.25" stroke="#3377FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+    </section>
+
+
+
+
     <footer class="mt-auto d-flex align-items-center justify-content-between" >
         <section id="info" >
             <img src="img/footer-logo.png">
+            <div>
+                <p style="color:#1E70EB;">C/ Doctor Ornilla 2</p>
+                <p style="color:#14CD04;">48004 Bilbao</p>
+                <p style="color:#FF3131;">idazkaria@fpTXurdinaga.com </p>
+                <p style="color:#A704F4;">+34 94 412 57 12</p>
+            </div>
         </section>
         
         <section id="rrss">
-            <img src="img/instagram-logo.svg">
-            <img src="img/linkedin-logo.svg">
-            <img src="img/twitter-logo.svg">
-            <img src="img/youtube-logo.svg">
+            <a href="https://instagram.com/fptxurdinaga/"><img src="img/instagram-logo.svg"></a>
+            <a href="https://es.linkedin.com/school/fptxurdinaga/"><img src="img/linkedin-logo.svg"></a>
+            <a href="https://twitter.com/i/flow/login?redirect_after_login=%2FFPTxurdinaga"><img src="img/twitter-logo.svg"></a>
         </section>
     </footer>
 </body>
